Fix horizontal scrolling in espruino theme

--- a/microcosm/static/themes/2/css/base.css
+++ b/microcosm/static/themes/2/css/base.css
@@ -42,7 +42,12 @@ a {
     color: #4898ac;
 }
 pre {
-    font-size: 11px;
+    font-size: 0.8em;
+    overflow-x: auto;
+}
+pre code {
+    word-wrap: normal;
+    white-space: pre;
 }
 .recent {
 	overflow: hidden;
